chore(json): declare chrono-tz feature flag

--- a/crates/polars-io/Cargo.toml
+++ b/crates/polars-io/Cargo.toml
@@ -57,12 +57,12 @@ tempfile = "3"
 default = ["decompress"]
 # support for arrows json parsing
 json = [
-  "polars-json",
-  "simd-json",
-  "atoi_simd",
-  "serde_json",
-  "dtype-struct",
-  "csv",
+	"polars-json",
+	"simd-json",
+	"atoi_simd",
+	"serde_json",
+	"dtype-struct",
+	"csv",
 ]
 serde = ["dep:serde", "polars-core/serde-lazy"]
 # support for arrows ipc file parsing
@@ -82,15 +82,16 @@ dtype-categorical = ["polars-core/dtype-categorical"]
 dtype-date = ["polars-core/dtype-date", "polars-time/dtype-date"]
 object = ["polars-core/object"]
 dtype-datetime = [
-  "polars-core/dtype-datetime",
-  "polars-core/temporal",
-  "polars-time/dtype-datetime",
-  "chrono",
+	"polars-core/dtype-datetime",
+	"polars-core/temporal",
+	"polars-time/dtype-datetime",
+	"chrono",
 ]
 timezones = [
-  "chrono-tz",
-  "dtype-datetime",
-  "arrow/timezones",
+	"chrono-tz",
+	"dtype-datetime",
+	"arrow/timezones",
+	"polars-json?/chrono-tz",
 ]
 dtype-time = ["polars-core/dtype-time", "polars-core/temporal", "polars-time/dtype-time"]
 dtype-struct = ["polars-core/dtype-struct"]
